format code
Signed-off-by: zane-neo <zaniu@amazon.com>